Updated header spacing, fixed resume.

--- a/style.css
+++ b/style.css
@@ -41,10 +41,11 @@ h2 {
     top: 0;
     z-index: 1;
     display: flex;
+    justify-content: center;
     width: 100%;
     min-height: 60px;
     font-size: 1rem;
-    background-image: linear-gradient(180deg, #1d1e22, rgba(29, 30, 34, 0.1), transparent);
+    background-image: linear-gradient(180deg, #1d1e22, rgba(29, 30, 34, 0.3), transparent);
     mix-blend-mode: luminosity;
 }
 
@@ -53,13 +54,14 @@ h2 {
     padding: 0;
     list-style-type: none;
     display: flex;
-    width: 100%;
-    justify-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 55%;
+    justify-content: space-evenly;
 }
 
 .header ul li {
-    margin: 0 1em;
-    padding: 1em 1vw 1vw;
+    padding: 1em 0.5em 0.5em;
 }
 
 .header ul li a {
@@ -139,7 +141,7 @@ section:nth-child(5) {
 
 .social {
     position: fixed;
-    top: 28%;
+    top: 21.5%;
     z-index: 3;
 }
 
